--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     },
     "autoload": {
         "psr-4": {
-            "PHPLegends\\PtBrValidator\\": "src/pt-br-validator"
+            "LaravelLegends\\PtBrValidator\\": "src/pt-br-validator"
         }
     },
     "minimum-stability": "stable"
