melhorando as ferramentas de testes (adicionando Orchestra)

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,6 @@
     "require": {
         "illuminate/support": "5.*"
     },
-    "required-dev" : {
-        "laravel/framework": "5.*"
-    },
     "autoload": {
         "psr-4": {
             "LaravelLegends\\PtBrValidator\\": "src/pt-br-validator"
@@ -21,6 +18,6 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "laravel/laravel": "5.0.*"
+        "orchestra/testbench": "3.0.*"
     }
 }
