--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "orchestra/testbench": "3.1.*"
+        "orchestra/testbench": "3.1.*",
+        "phpunit/phpunit": "~5.7"
     }
 }
