--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
     "minimum-stability": "stable",
     "require-dev": {
         "orchestra/testbench": "3.1.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "4.8.*"
     }
 }
