--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,12 @@
     "require-dev": {
         "orchestra/testbench": "3.1.*",
         "phpunit/phpunit": "4.8.*"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "LaravelLegends\\PtBrValidator\\ValidatorProvider"
+            ]
+        }
     }
 }
