--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.*"
+        "illuminate/support": "5.0.* || 5.1.* || 5.2.* || 5.3.* || 5.4.* || 5.5.* || 5.6.* || ^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -18,7 +18,7 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "orchestra/testbench": "3.1.*",
-        "phpunit/phpunit": "4.8.*"
+        "orchestra/testbench": "3.1.* || 4.0.*",
+        "phpunit/phpunit": "4.8.* || ^8.0"
     }
 }
