--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravellegends/pt-br-validator",
-    "description": "Uma biblioteca contendo validações de formatos Brasileiros, para o Laravel 5",
+    "description": "Uma biblioteca contendo validações de formatos Brasileiros, para o Laravel",
     "license" : "MIT",
     "authors": [
         {
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "^6.0"
+        "illuminate/support": "^6.0 || ^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,7 +25,7 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "orchestra/testbench": "3.1.* || 4.0.*",
-        "phpunit/phpunit": "4.8.* || ^8.0"
+        "orchestra/testbench": "^4.0 || ^5.0",
+        "phpunit/phpunit": "^8.3 || ^9.0"
     }
 }
