--- a/composer.json
+++ b/composer.json
@@ -27,5 +27,8 @@
     "require-dev": {
         "orchestra/testbench": "^4.0 || ^5.0 || ^6.0",
         "phpunit/phpunit": "^8.3 || ^9.0"
+    },
+    "scripts" : {
+        "test" : "./vendor/bin/phpunit"
     }
 }
