--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ dist: trusty
 php:
   - 7.2
   - 7.3
+  - 7.4
+  - 8.0
+  - 8.1
 
 before_script:
   - travis_retry composer self-update
-  - travis_retry composer install --prefer-source --no-interaction --dev
+  - travis_retry composer install --prefer-source --no-interaction
 
 script: ./vendor/bin/phpunit
