--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "laravellegends/pt-br-validator",
     "description": "Uma biblioteca contendo validações de formatos Brasileiros, para o Laravel",
-    "license" : "MIT",
+    "license": "MIT",
     "authors": [
         {
             "name": "Wallace de Souza Vizerra",
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0"
+        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0|^10.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,10 +25,10 @@
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0",
+        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0|^8.0",
         "phpunit/phpunit": "^8.3 || ^9.0"
     },
-    "scripts" : {
-        "test" : "./vendor/bin/phpunit"
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     }
 }
