--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
+/.phpunit.cache
 /vendor
-composer.phar
-composer.lock
-.DS_Store
-pt-br-validator.sublime-project
-pt-br-validator.sublime-workspace
-/.phpintel/
-.phpunit.cache/
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+/.fleet
+/.idea
+/.vscode
