--- a/composer.json
+++ b/composer.json
@@ -9,26 +9,40 @@
         }
     ],
     "require": {
-        "illuminate/support": "^6.0 || ^7.0 || ^8.0 || ^9.0 || ^10.0"
+        "php": "^8.2",
+        "laravel/framework": "^10.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^10.5",
+        "pestphp/pest": "^2.34",
+        "pestphp/pest-plugin-laravel": "^2.3",
+        "orchestra/testbench": "^8.21",
+        "laravel/pint": "^1.14"
     },
     "autoload": {
         "psr-4": {
-            "LaravelLegends\\PtBrValidator\\": "src/pt-br-validator"
+            "ValidatorDocs\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "test": "./vendor/bin/phpunit"
     },
     "extra": {
         "laravel": {
             "providers": [
-                "LaravelLegends\\PtBrValidator\\ValidatorProvider"
+                "ValidatorDocs\\ServiceProvider"
             ]
         }
     },
-    "minimum-stability": "stable",
-    "require-dev": {
-        "orchestra/testbench": "^4.0 || ^5.0 || ^6.0 || ^7.0 || ^8.0",
-        "phpunit/phpunit": "^8.3 || ^9.0"
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
-    "scripts": {
-        "test": "./vendor/bin/phpunit"
-    }
+    "minimum-stability": "stable"
 }
