--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -14,7 +14,7 @@ jobs:
       matrix:
         # operating-system: [ubuntu-latest, windows-latest, macOS-latest]
         operating-system: [ubuntu-latest]
-        php-versions: ['7.2', '7.3', '7.4', '8.0']
+        php-versions: ['7.2', '7.3', '7.4', '8.0', '8.1', '8.2']
 
     steps:
     - uses: actions/checkout@v2
